// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StreamEmbed video is not ready 1`] = `[]`;

exports[`StreamEmbed watch.gxplayer.xyz with MediaFlow 1`] = `
[
  {
    "format": "hls",
    "label": "StreamEmbed",
    "meta": {
      "extractorId": "streamembed",
      "height": 720,
      "title": "Baymax - Riesiges Robowabohu.mp4",
    },
    "ttl": 21600000,
    "url": "https://mediaflow.test.org/proxy/hls/manifest.m3u8?api_password=test&d=https%3A%2F%2Fwatch.gxplayer.xyz%2Fm3u8%2F3%2F30b4a92517ace5825f5944c8a794ad3e%2Fmaster.txt%3Fs%3D1%26id%3D11782%26cache%3D1&force_playlist_proxy=true&h_referer=https%3A%2F%2Fwatch.gxplayer.xyz",
  },
]
`;

exports[`StreamEmbed watch.gxplayer.xyz without MediaFlow 1`] = `
[
  {
    "format": "hls",
    "label": "StreamEmbed",
    "meta": {
      "extractorId": "streamembed",
      "height": 720,
      "title": "Baymax - Riesiges Robowabohu.mp4",
    },
    "ttl": 21600000,
    "url": "https://watch.gxplayer.xyz/m3u8/3/30b4a92517ace5825f5944c8a794ad3e/master.txt?s=1&id=11782&cache=1",
  },
]
`;
